--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@heroicons/vue": "^2.1.3",
     "@nuxtjs/proxy": "^2.1.0",
+    "@nuxtjs/tailwindcss": "^6.12.0",
     "@pinia/nuxt": "^0.5.1",
+    "@tailwindcss/forms": "^0.5.7",
     "jose": "^5.2.4",
     "nuxt": "^3.11.2",
     "pinia": "^2.1.7",
@@ -20,6 +23,7 @@
     "vue-router": "^4.3.0"
   },
   "devDependencies": {
-    "@pinia-plugin-persistedstate/nuxt": "^1.2.0"
+    "@pinia-plugin-persistedstate/nuxt": "^1.2.0",
+    "nuxt-headlessui": "^1.2.0"
   }
 }
