--- a/package.json
+++ b/package.json
@@ -15,15 +15,24 @@
     "@nuxtjs/proxy": "^2.1.0",
     "@nuxtjs/tailwindcss": "^6.12.0",
     "@pinia/nuxt": "^0.5.1",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.7",
+    "@tailwindcss/typography": "^0.5.13",
+    "@types/tracking": "^1.1.33",
+    "dat.gui": "^0.7.9",
     "jose": "^5.2.4",
     "nuxt": "^3.11.2",
     "pinia": "^2.1.7",
+    "sass": "^1.77.1",
+    "tracking": "^1.1.3",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
   },
   "devDependencies": {
     "@pinia-plugin-persistedstate/nuxt": "^1.2.0",
     "nuxt-headlessui": "^1.2.0"
+  },
+  "engines": {
+    "node": ">=20.0.0"
   }
 }
