--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "type": "module",
   "scripts": {
     "build": "nuxt build",
-    "dev": "nuxt dev",
+    "dev": "nuxt dev --https --ssl-cert localhost.pem --ssl-key localhost-key.pem",
+    "http-dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "start": "nuxt start",
@@ -12,17 +13,24 @@
   },
   "dependencies": {
     "@heroicons/vue": "^2.1.3",
+    "@nuxt/image": "^1.7.0",
+    "@nuxtjs/color-mode": "^3.4.2",
     "@nuxtjs/proxy": "^2.1.0",
     "@nuxtjs/tailwindcss": "^6.12.0",
     "@pinia/nuxt": "^0.5.1",
+    "@sidebase/nuxt-auth": "0.8.0-alpha.2",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.13",
+    "@tanstack/vue-query": "^5.48.0",
     "@types/tracking": "^1.1.33",
+    "autoprefixer": "^10.4.19",
+    "daisyui": "^4.12.7",
     "dat.gui": "^0.7.9",
     "jose": "^5.2.4",
     "nuxt": "^3.11.2",
     "pinia": "^2.1.7",
+    "postcss": "^8.4.38",
     "sass": "^1.77.1",
     "tracking": "^1.1.3",
     "vue": "^3.4.21",
@@ -30,6 +38,7 @@
   },
   "devDependencies": {
     "@pinia-plugin-persistedstate/nuxt": "^1.2.0",
+    "daisyui": "^4.12.7",
     "nuxt-headlessui": "^1.2.0"
   },
   "engines": {
