--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.13",
     "@tanstack/vue-query": "^5.48.0",
+    "@tinymce/tinymce-vue": "^5",
     "@types/tracking": "^1.1.33",
     "autoprefixer": "^10.4.19",
     "daisyui": "^4.12.7",
@@ -32,6 +33,7 @@
     "pinia": "^2.1.7",
     "postcss": "^8.4.38",
     "sass": "^1.77.1",
+    "tinymce": "^7.2.0",
     "tracking": "^1.1.3",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
